@@ -1,4 +1,5 @@
 0.20
+ - Add DOUGLISH CPAN account.
 
 0.19 2015-09-21T22:12:06+02:00
  - Move author tests to xt/ directory.
